--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.6",
     "nodemailer": "^6.10.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
